--- a/FingerFantasy/AndroidManifest.xml
+++ b/FingerFantasy/AndroidManifest.xml
@@ -16,9 +16,11 @@
         <activity
             android:name=".StartActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -29,8 +31,11 @@
         </activity>
         <activity
             android:name=".BattleActivity"
-            android:label="@string/title_activity_battle" 
-			>
+            android:label="@string/title_activity_battle" >
+        </activity>
+        <activity
+            android:name=".ReesultActivity"
+            android:label="@string/title_activity_reesult" >
         </activity>
     </application>
 
