--- a/FingerFantasy/AndroidManifest.xml
+++ b/FingerFantasy/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:name=".StartActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
+            android:theme="@android:style/Theme.Black.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,11 +31,13 @@
         </activity>
         <activity
             android:name=".BattleActivity"
-            android:label="@string/title_activity_battle" >
+            android:label="@string/title_activity_battle"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".ReesultActivity"
-            android:label="@string/title_activity_reesult" >
+            android:label="@string/title_activity_reesult"
+            android:screenOrientation="portrait" >
         </activity>
     </application>
 
