--- a/FingerFantasy/AndroidManifest.xml
+++ b/FingerFantasy/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name=".ReesultActivity"
+            android:name=".ResultActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
